refactor: 优化键映射配置并移除未使用的插件
- 在 `.vscode/settings.json` 中添加 `sniprun` 插件
- 修复 `gitsigns` 函数中的 `buf` 参数错误
- 移除 `edgy.nvim` 插件及其相关配置
- 移除未使用的 `cmp` 插件
- 优化 `Neotree` 和 `Telescope` 的键映射配置
- 调整 `LSP` 相关键映射以提升用户体验
- 添加新的缓冲区管理键映射

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "neoconf",
         "noremap",
         "nvim",
+        "sniprun",
         "toggleterm",
         "unstaging",
         "venv",
