--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "keymap",
         "keymapping",
         "lspconfig",
+        "lspsaga",
         "neoconf",
         "noremap",
         "nvim",
