--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,11 @@
         "keymapping",
         "lspconfig",
         "lspsaga",
+        "luasnip",
         "neoconf",
         "noremap",
         "nvim",
+        "orgmode",
         "sniprun",
         "toggleterm",
         "unstaging",
