--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,22 +3,40 @@
         "vim"
     ],
     "cSpell.words": [
+        "bcommits",
         "bufnr",
         "buftype",
+        "cmdline",
+        "cword",
+        "deepcopy",
+        "diffview",
+        "filetree",
+        "frecency",
+        "getcwd",
         "gitsigns",
+        "iglob",
+        "ipython",
+        "isdirectory",
+        "jumplist",
         "keymap",
         "keymapping",
+        "keymaps",
+        "lazygit",
         "lspconfig",
         "lspsaga",
         "luasnip",
         "neoconf",
+        "neotree",
         "noremap",
+        "nowait",
         "nvim",
+        "Oldfiles",
         "orgmode",
         "sniprun",
         "toggleterm",
         "unstaging",
         "venv",
+        "vimgrep",
         "winbar",
         "wincmd"
     ]
